<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/header_img"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_near_me_header" />

    <TextView
        android:id="@+id/header_updates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/mock_locations"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/uicolor_text_high"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_updates"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/give_mock_lock_permission"
        android:textColor="@color/uicolor_text_medium"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/find_and_select_app"
        android:textColor="@color/uicolor_text_medium"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ignore"
        android:layout_marginBottom="@dimen/istyle_button_above_text"
        android:text="@string/open_developer_settings"
        android:textAllCaps="false"
        android:textColor="@color/material_button_text_color"
        app:backgroundTint="@color/primaryColor" />

    <TextView
        android:id="@+id/ignore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dont_enable_ml"
        android:textColor="@color/secondaryColor"
        android:textStyle="bold" />

</RelativeLayout>