<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_ui"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/information"
        android:textColor="@color/uicolor_text_high" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/title"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:layout_marginTop="3dp"
        android:paddingStart="15dp"
        android:text="NAME"
        android:textColor="@color/uicolor_text_medium"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/where_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginStart="15dp"
        android:text="@string/where_from_info" />

    <TextView
        android:id="@+id/where_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/where_from"
        android:layout_marginStart="15dp"
        android:text="@string/where_to_text" />

    <org.osmdroid.views.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/where_to"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp" />

    <RelativeLayout
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/material_statusbar">

        <TextView
            android:id="@+id/copyright_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@color/uicolor_text_medium"
            android:textSize="6sp" />
    </RelativeLayout>


    <include
        layout="@layout/route_building_fullscreen_dialog"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/where_to"
        android:layout_margin="15dp" />


    <RelativeLayout
        android:id="@+id/remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/map"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:foreground="@drawable/material_ripple"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageView
            android:id="@+id/set_on_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_delete_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/set_on_map"
            android:text="@string/remove"
            android:textColor="@color/uicolor_text_medium"
            android:textSize="16sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remove"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_action"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/text_dialog"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/outlined_button"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/uicolor_text_high"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_action"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/text_dialog"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/outlined_button"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@color/uicolor_text_high"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>