<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    tools:context=".UI.PermissionsActivity">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_header_height"
        android:background="@color/activity_header">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/permissions"
            android:textColor="@color/uicolor_text_high"
            android:textSize="36sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:orientation="vertical"

        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/need_permissions"
            android:textColor="@color/uicolor_text_high" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <RelativeLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/location_img"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/location_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/location_img"
                    android:text="@string/location"
                    android:textColor="@color/uicolor_text_high"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/location_img"
                    android:layout_toEndOf="@id/location_img"
                    android:text="@string/location_perm_description"
                    android:textColor="@color/uicolor_text_medium"
                    android:textSize="12sp" />
            </RelativeLayout>


        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/stick_button"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp" />
    </RelativeLayout>
</RelativeLayout>